<resources>
    <string name="app_name">Pop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Prénom nom</string>
    <string name="nav_header_subtitle">adresse mail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Crédit</string>
    <string name="menu_gallery">Gallerie</string>
    <string name="menu_slideshow">Info</string>
    <string name="menu_tools">Paramètres</string>
    <string name="menu_share">Parrainage</string>
    <string name="menu_send">Envoyer</string>
    <string name="menu_out">Déconnection</string>
    <string name="title_activity_login">Connection</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_passwordBETA">Mot de passe BETA</string>
    <string name="hint_confpassword">Confirmation de mot de passe</string>
    <string name="hint_name">Nom</string>
    <string name="hint_firstname">Prénom</string>

    <string name="hint_Number">"N°"</string>
    <string name="hint_House">Adresse</string>
    <string name="hint_codePostal">Code Postal</string>
    <string name="hint_country">Pays</string>
    <string name="hint_Batiment">Bâtiment</string>
    <string name="hint_region">Région</string>
    <string name="hint_phone">Téléphone</string>









    <string name="btn_login">Connection</string>
    <string name="btn_register">Enregistrement</string>
    <string name="btn_link_to_register">Créer un compte </string>
    <string name="btn_link_to_login">Déjà membre, connectez-vous.</string>

    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>


</resources>
