<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="710dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nouveau compte"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/familyName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_firstname"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />


        <EditText
            android:id="@+id/passwordconfirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_confpassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />

        <!-- Login Button -->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adresse de livraison" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/addressNumber"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/hint_Number"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/addressHouse"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/hint_House"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/codePostal"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/hint_codePostal"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/country"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/hint_country"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Optionnel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/addressBatiment"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/hint_Batiment"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/addressRegion"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/hint_region"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/numeroPhone"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/hint_phone"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="#ea4c88"
            android:text="@string/btn_register" />

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/textView13"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:text="En m'inscrivant, je reconnais avoir lu et accepte les conditions générales de vente. J'accepte également que POP (société domiciliée en France) utilise mes données personnelles dans le cadre de la création de mon compte. " />

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>